--- a/publish.properties.example
+++ b/publish.properties.example
@@ -3,5 +3,6 @@ bintrayUser=aoeiuv020
 bintrayKey=
 userOrg=aoeiuv020
 groupId=cc.aoeiuv020
+artifactId=imaging
 website=https://github.com/AoEiuV020/imaging
 licences=MIT
